and get it to work

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="content"></div>
-    <script type="text/babel" src="scripts/manual.js"></script>
+    <script src="scripts/manual.js"></script>
     <script type="text/babel" src="scripts/app.js"></script>
   </body>
 </html>
